src/objects/pse__Timecard_Entry_UI_Global__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>ORG wide settings for Timecard UI. These settings will derive the Timecard UI behavior for everyone in organization.</description>
    <fields>
        <fullName>pse__Allow_timecard_with_negative_hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Given config is used to control the saving/submiting of timecard with negative hours. If it is true, timecards with negative hours are saved/submited else not(warning will be shown on ui).</description>
        <label>Allow timecard with negative hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_load_limit__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Number of Assignments to be loaded for the timecard assignment drop down</description>
        <inlineHelpText>Number of Assignments to be loaded for the timecard assignment drop down</inlineHelpText>
        <label>Assignment load limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_lookup_columns__c</fullName>
        <defaultValue>&apos;Name,Nick_Name__c&apos;</defaultValue>
        <description>List of API names of assignment fields to display as columns on the Project/Assignment  lookup in the enhanced  Time Entry page. Do not include the pse__ namespace prefix in the API name of a field. The default value is Name, Nick_Name__c.</description>
        <inlineHelpText>List of API names of assignment fields to display as columns on the Project/Assignment  lookup in the enhanced  Time Entry page. Do not include the pse__ namespace prefix in the API name of a field. The default value is Name, Nick_Name__c.</inlineHelpText>
        <label>Assignment lookup columns</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Assignments_load_date_restriction__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Assignment start and end date restriction while loading the Assignments in the Timecard UI.  If true, only Assignments whose start/end dates either contain or overlap with the Timecard date range are loaded.  This affects the UI only, not Admin edit or manual/native Timecard creation.</description>
        <inlineHelpText>Assignment start and end date restriction while loading the Assignments in the Timecard UI.  If true, only Assignments whose start/end dates either contain or overlap with the Timecard date range are loaded.  This affects the UI only, not Admin edit.</inlineHelpText>
        <label>Assignments load date restriction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assignments_load_status_values__c</fullName>
        <defaultValue>&quot;Tentative,Scheduled&quot;</defaultValue>
        <description>List of assignment status values to be used while loading the assignments from db.</description>
        <inlineHelpText>List of assignment status values to be used while loading the assignments from db.</inlineHelpText>
        <label>Assignments load status values</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Check_For_Previous_Week_Timecards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true,  on initial load of  new Timecard UI it will check for previous week timecards. If there is no timecards filled for the previous week, UI will show confirmation window asking user to load previous week or current week.  If false, work as normal i.e no confirmation window and load current week.</description>
        <inlineHelpText>If true,  on initial load of  new Timecard UI it will check for previous week timecards. If there is no timecards filled for the previous week, UI will show confirmation window asking user to load previous week or current week.  If false, work as normal.</inlineHelpText>
        <label>Check For Previous Week Timecards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Day_hour_auto_revert_ceiling__c</fullName>
        <defaultValue>24</defaultValue>
        <description>Config  to control max auto-revert hour value on the new TC UI.</description>
        <inlineHelpText>Config  to control max auto-revert hour value on the new TC UI.</inlineHelpText>
        <label>Day hour auto revert ceiling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Day_hour_auto_revert_floor__c</fullName>
        <defaultValue>-24</defaultValue>
        <description>Config  to control min auto-revert hour value on the new TC UI.</description>
        <inlineHelpText>Config  to control min auto-revert hour value on the new TC UI.</inlineHelpText>
        <label>Day hour auto revert floor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Display_account_on_resource_lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether Resource Account is shown as a column for search results in the Resource lookup pop-up.</description>
        <label>Display account on resource lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Project_lookup_columns__c</fullName>
        <defaultValue>&apos;Name, Account__r.Name&apos;</defaultValue>
        <description>List of API names of project fields to display as columns on the Project/Assignment  lookup in the enhanced  Time Entry page. Do not include the pse__ namespace prefix in the API name of a field. The default value is Name, Account__r.Name.</description>
        <inlineHelpText>List of API names of project fields to display as columns on the Project/Assignment  lookup in the enhanced  Time Entry page. Do not include the pse__ namespace prefix in the API name of a field. The default value is Name, Account__r.Name.</inlineHelpText>
        <label>Project lookup columns</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Projects_load_date_restriction__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Project start and end date restriction while loading the project/assignments from db.</description>
        <inlineHelpText>Project start and end date restriction while loading the project/assignments from db.</inlineHelpText>
        <label>Projects load date restriction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Resource_access__c</fullName>
        <defaultValue>&quot;all&quot;</defaultValue>
        <description>If config value equals to &apos;all&apos; , means all resources along with current user resources will be loaded. Else if value equals to &apos;resource&apos; or null, only current user resources will be loaded.</description>
        <inlineHelpText>If config value equals to &apos;all&apos; , means all resources along with current user resources will be loaded. Else if value equals to &apos;resource&apos; or null, only current user resources will be loaded.</inlineHelpText>
        <label>Resource access</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_lookup_columns__c</fullName>
        <defaultValue>&apos;Name,Region__r.Name,Practice__r.Name,Group__r.Name&apos;</defaultValue>
        <description>List of Resource fields (fully-qualified API names/paths) to display on columns for Resource lookup pop-up in new Timecard UI. Recommend at most 4 fields/columns. Default value: Name, Region__r.Name, Practice__r.Name, Group__r.Name</description>
        <inlineHelpText>List of Resource fields (fully-qualified API names/paths) to display on columns for Resource lookup pop-up in new Timecard UI. Recommend at most 4 fields/columns. Default value: Name, Region__r.Name, Practice__r.Name, Group__r.Name</inlineHelpText>
        <label>Resource lookup columns</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Save_submit_batch_size__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Size of Number of timecards to be save/submit in one batch execution.</description>
        <inlineHelpText>Size of Number of timecards to be save/submit in one batch execution.</inlineHelpText>
        <label>Save submit batch size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Save_timecard_with_zero_hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Config is used to control the saving of timecard with zero hours. If it is true, timecards with zero are saved else not saved(warning will be shown on ui).</description>
        <inlineHelpText>Config is used to control the saving of timecard with zero hours. If it is true, timecards with zero are saved else not saved(warning will be shown on ui).</inlineHelpText>
        <label>Save timecard with zero hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Schedule_editable__c</fullName>
        <defaultValue>&quot;ALL&quot;</defaultValue>
        <label>Schedule editable</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__TC_Sorted_By_Order__c</fullName>
        <description>Config for holding the timecard sorted by order field API names. Multiple coma separated fields can be entered for sorting. Ex : CreatedDate, Project__r.Name</description>
        <inlineHelpText>Config for holding the timecard sorted by order fields API names. Multiple coma separated fields can be entered for sorting. Ex : CreatedDate, Project__r.Name</inlineHelpText>
        <label>TC Sorted By Order</label>
        <length>246</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_edit_status_values__c</fullName>
        <defaultValue>&quot;saved&quot;</defaultValue>
        <description>CSV List of status values for which the timecard entry rows can be edited.</description>
        <inlineHelpText>CSV List of status values for which the timecard entry rows can be edited.</inlineHelpText>
        <label>Timecard edit status values</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_save_button_action__c</fullName>
        <defaultValue>&quot;Saved&quot;</defaultValue>
        <description>Used to determines what status the timecards will be set to on save button click</description>
        <inlineHelpText>Used to determines what status the timecards will be set to on save button click</inlineHelpText>
        <label>Timecard save button action</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_submit_button_action__c</fullName>
        <defaultValue>&quot;Submitted&quot;</defaultValue>
        <description>Used to determines what status the timecards will be set to on submit button click</description>
        <inlineHelpText>Used to determines what status the timecards will be set to on submit button click</inlineHelpText>
        <label>Timecard submit button action</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Use_Project_Location_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, then Location drop-downs will bind to Project Location object instead of location picklists on TC UI</description>
        <inlineHelpText>If true, then Location drop-downs will bind to Project Location object instead of location picklists on TC UI</inlineHelpText>
        <label>Use Project Location Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Project_Methodology_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Project Methodology Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Project_Phase_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Project Phase Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Week_start_day__c</fullName>
        <defaultValue>&quot;Monday&quot;</defaultValue>
        <description>Default week start day value to be picked if Resource does not have a value for Contact.Work_Calendar__r.Week_Start_Day__c</description>
        <inlineHelpText>Default week start day value to be picked if Resource does not have a value for Contact.Work_Calendar__r.Week_Start_Day__c</inlineHelpText>
        <label>Week start day</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__submit_timecard_with_zero_hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Config is used to control the submit of timecard with zero hours. If it is true, timecards with zero can be submitted else warning will be shown on ui.</description>
        <inlineHelpText>Config is used to control the submit of timecard with zero hours. If it is true, timecards with zero can be submitted else warning will be shown on ui.</inlineHelpText>
        <label>Submit timecard with zero hours</label>
        <type>Checkbox</type>
    </fields>
    <label>Timecard Entry UI Global</label>
</CustomObject>